# tawala

./: README.md  publish.py  pyproject.toml
.github/workflows/: build-and-publish.yaml  create-release-tag.yaml  package.yaml  publish.yaml  release.yaml  tag.yaml
scripts/: publish.py
src/christianwhocodes/: __init__.py  cli.py
src/dev/: cli.py
