[project]
name = "christianwhocodes"
version = "0.0.1.post1"
description = "A developer's utility belt, just like Batman's utility belt but for code."
readme = "README.md"
license = { file = "LICENSE" }
authors = [
    { name = "christianwhocodes", email = "dev@christianwhocodes.space" },
]
requires-python = ">=3.12"
dependencies = ["pyperclip>=1.11.0", "rich>=14.2.0"]

[project.scripts]
christianwhocodes = "christianwhocodes.cli:main"

[project.urls]
homepage = "https://github.com/christianwhocodes/cwc"
repository = "https://github.com/christianwhocodes/cwc"
issues = "https://github.com/christianwhocodes/cwc/issues"

[[tool.uv.index]]
name = "testpypi"
url = "https://test.pypi.org/simple/"
publish-url = "https://test.pypi.org/legacy/"
explicit = true

[build-system]
requires = ["uv_build>=0.9.10,<0.10.0"]
build-backend = "uv_build"
